N4CED_V-0-2 and pipeline sync with embedded toolchain

--- a/Code/Jupyter/CNN inference.ipynb
+++ b/Code/Jupyter/CNN inference.ipynb
@@ -24,27 +24,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted class: \"street_music\" with 100 score.\n",
-      "Predicted class: \"street_music\" with 99 score.\n",
-      "Predicted class: \"street_music\" with 99 score.\n",
-      "Predicted class: \"street_music\" with 99 score.\n",
-      "Predicted class: \"street_music\" with 100 score.\n",
-      "Predicted class: \"street_music\" with 99 score.\n",
-      "Predicted class: \"street_music\" with 98 score.\n",
-      "Predicted class: \"street_music\" with 99 score.\n",
-      "Predicted class: \"street_music\" with 94 score.\n",
+      "Predicted class: \"street_music\" with 93 score.\n",
+      "Predicted class: \"street_music\" with 73 score.\n",
+      "Predicted class: \"street_music\" with 90 score.\n",
+      "Predicted class: \"street_music\" with 93 score.\n",
+      "Predicted class: \"street_music\" with 92 score.\n",
+      "Predicted class: \"street_music\" with 77 score.\n",
+      "Predicted class: \"dog_bark\" with 59 score.\n",
+      "Predicted class: \"street_music\" with 38 score.\n",
+      "Predicted class: \"children_playing\" with 55 score.\n",
+      "Predicted class: \"children_playing\" with 53 score.\n",
+      "Predicted class: \"street_music\" with 41 score.\n",
+      "Predicted class: \"street_music\" with 43 score.\n",
+      "Predicted class: \"street_music\" with 95 score.\n",
+      "Predicted class: \"street_music\" with 74 score.\n",
+      "Predicted class: \"street_music\" with 49 score.\n",
+      "Predicted class: \"street_music\" with 29 score.\n",
+      "Predicted class: \"drilling\" with 51 score.\n",
+      "Predicted class: \"street_music\" with 67 score.\n",
+      "Predicted class: \"street_music\" with 97 score.\n",
+      "Predicted class: \"street_music\" with 90 score.\n",
+      "Predicted class: \"street_music\" with 64 score.\n",
+      "Predicted class: \"street_music\" with 49 score.\n",
+      "Predicted class: \"street_music\" with 86 score.\n",
+      "Predicted class: \"street_music\" with 88 score.\n",
+      "Predicted class: \"street_music\" with 91 score.\n",
+      "Predicted class: \"street_music\" with 89 score.\n",
+      "Predicted class: \"street_music\" with 89 score.\n",
+      "Predicted class: \"street_music\" with 91 score.\n",
+      "Predicted class: \"street_music\" with 96 score.\n",
+      "Predicted class: \"street_music\" with 65 score.\n",
       "----- done. -----\n",
-      "9 true predictions\n",
-      "0 false predictions\n",
-      "test accuracy: 90%\n",
-      "error ratio: 0%\n"
+      "26 true predictions\n",
+      "4 false predictions\n",
+      "test accuracy: 86%\n",
+      "error ratio: 13%\n"
      ]
     }
    ],
@@ -52,12 +73,12 @@
     "param_dict = conf.open_params()\n",
     "\n",
     "base_path = \"Datasets/UrbanSound8k_augmented/street_music/\"\n",
-    "stop_at = 10\n",
-    "i = 1\n",
+    "stop_at = 30\n",
+    "i = 0\n",
     "true = 0\n",
     "false = 0\n",
     "\n",
-    "N4CED = load_model(param_dict[\"model_name\"])\n",
+    "N4CED = load_model(param_dict[\"CNN_name\"])\n",
     "\n",
     "for file in os.listdir(base_path):\n",
     "\n",
@@ -121,6 +142,44 @@
     "print('----- done. -----')\n",
     "print(f'{true} true predictions\\n{false} false predictions')\n",
     "print(f'test accuracy: {int((true/i)*100)}%\\nerror ratio: {int((false/i)*100)}%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: C:\\Users\\JDA1E~1.TSC\\AppData\\Local\\Temp\\tmp5his_7ln\\assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:Buffer deduplication procedure will be skipped when flatbuffer library is not properly loaded\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "745868"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "converter = tf.lite.TFLiteConverter.from_keras_model(N4CED)\n",
+    "tflite_model = converter.convert()\n",
+    "open(param_dict[\"CNN_name\"] + \"/\" + param_dict[\"CNN_name\"] + \"_lite.tflite\", \"wb\").write(tflite_model)"
    ]
   }
  ],
