--- a/Code/Jupyter/Config.ipynb
+++ b/Code/Jupyter/Config.ipynb
@@ -25,12 +25,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CNN_name: N4CED_V-0-1\n",
+      "CNN_name: N4CED_V-0-2\n",
       "extr_txt_fp: Datasets/Feature_extraction/th_oct_coeffs.txt\n",
       "label_txt_fp: Datasets/Feature_extraction/labels.txt\n",
       "source_dir: Datasets/UrbanSound8k_augmented/\n",
+      "kernel_size: [3, 3]\n",
+      "pool_size: [2, 2]\n",
+      "batch_size: 50\n",
+      "epochs: 50\n",
       "fs: 48000\n",
-      "fmin: 100\n",
+      "fmin: 20\n",
       "fmax: 12800\n",
       "oct_bw_ratio: 0.3333333333333333\n",
       "order: 8\n",
@@ -40,6 +44,8 @@
       "frame_size: 1000\n",
       "window_size: 48000\n",
       "max_dur: 5\n",
+      "augmented: True\n",
+      "n_bands: 28\n",
       "n_sections: 4\n",
       "fps: 48\n",
       "class_map: ['car_horn', 'children_playing', 'dog_bark', 'drilling', 'engine_idling', 'jackhammer', 'street_music']\n"
@@ -47,26 +53,39 @@
     }
    ],
    "source": [
-    "param_dict = {  \n",
-    "    \"CNN_name\":                 \"N4CED_V-0-1\",\n",
-    "    \"extr_txt_fp\":              \"Datasets/Feature_extraction/th_oct_coeffs.txt\",\n",
-    "    \"label_txt_fp\":             \"Datasets/Feature_extraction/labels.txt\",\n",
-    "    \"source_dir\":               \"Datasets/UrbanSound8k_augmented/\",\n",
-    "    \"fs\":                       48000,  # sample rate\n",
-    "    \"fmin\":                     100,    # lowest f of interest\n",
-    "    \"fmax\":                     12800,  # highest f of interest\n",
-    "    \"oct_bw_ratio\":             1/3,    # octave / amount of subdivisions\n",
-    "    \"order\":                    8,      # order of octave filters\n",
-    "    \"n_coeffs\":                 6,      # constant, definition of sos-matrix\n",
-    "    \"dec_stages\":               4,      # number of decimations across bank\n",
-    "    \"dec_ord\":                  10,     # order of decimation AA-filters\n",
-    "    \"frame_size\":               1000,   # framing size\n",
-    "    \"window_size\":              48000,  # size of a window (max size of input to CNN)\n",
-    "    \"max_dur\":                  5       # max duration of sound in s\n",
-    "}\n",
+    "cnn = input(\"Enter the new CNN name: \")\n",
+    "y = input(f'Name CNN \"{cnn}\"? Confirm (y/n):')\n",
     "\n",
-    "conf.save_params(param_dict)\n",
-    "conf.print_dict_params()"
+    "if y == 'y':\n",
+    "\n",
+    "    param_dict = {  \n",
+    "        \"CNN_name\":                 cnn,\n",
+    "        \"extr_txt_fp\":              \"Datasets/Feature_extraction/th_oct_coeffs.txt\",\n",
+    "        \"label_txt_fp\":             \"Datasets/Feature_extraction/labels.txt\",\n",
+    "        \"source_dir\":               \"Datasets/UrbanSound8k_augmented/\",\n",
+    "        \"kernel_size\":              (3, 3),\n",
+    "        \"pool_size\":                (2, 2),\n",
+    "        \"batch_size\":               50,\n",
+    "        \"epochs\":                   50,\n",
+    "        \"fs\":                       48000,  # sample rate\n",
+    "        \"fmin\":                     20,     # lowest f of interest\n",
+    "        \"fmax\":                     12800,  # highest f of interest\n",
+    "        \"oct_bw_ratio\":             1/3,    # octave / amount of subdivisions\n",
+    "        \"order\":                    8,      # order of octave filters\n",
+    "        \"n_coeffs\":                 6,      # constant, definition of sos-matrix\n",
+    "        \"dec_stages\":               4,      # number of decimations across bank\n",
+    "        \"dec_ord\":                  10,     # order of decimation AA-filters\n",
+    "        \"frame_size\":               1000,   # framing size\n",
+    "        \"window_size\":              48000,  # size of a window (max size of input to CNN)\n",
+    "        \"max_dur\":                  5,      # max duration of sound in s\n",
+    "        \"augmented\":                True\n",
+    "    }\n",
+    "\n",
+    "    conf.save_params(param_dict)\n",
+    "    conf.print_dict_params()\n",
+    "\n",
+    "else:\n",
+    "    print('Abort parameter selection.\\nexit.')"
    ]
   }
  ],
