working A-weighting pipeline

--- a/Code/Jupyter/Config.ipynb
+++ b/Code/Jupyter/Config.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,6 +28,7 @@
       "CNN_name: sine_model\n",
       "extr_txt_fp: Datasets/Feature_extraction/th_oct_feats.txt\n",
       "label_txt_fp: Datasets/Feature_extraction/labels.txt\n",
+      "leq_txt_fp: Datasets/Feature_extraction/LEQs.txt\n",
       "source_dir: Datasets/sine_data/\n",
       "kernel_size: [3, 3]\n",
       "pool_size: [2, 2]\n",
@@ -63,6 +64,7 @@
     "        \"CNN_name\":                 cnn,\n",
     "        \"extr_txt_fp\":              \"Datasets/Feature_extraction/th_oct_feats.txt\",\n",
     "        \"label_txt_fp\":             \"Datasets/Feature_extraction/labels.txt\",\n",
+    "        \"leq_txt_fp\":               \"Datasets/Feature_extraction/LEQs.txt\",\n",
     "        \"source_dir\":               \"Datasets/sine_data/\",\n",
     "        \"kernel_size\":              (3, 3),\n",
     "        \"pool_size\":                (2, 2),\n",
@@ -110,7 +112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.1"
   },
   "orig_nbformat": 4
  },
