--- a/Code/Jupyter/CNN inference.ipynb
+++ b/Code/Jupyter/CNN inference.ipynb
@@ -9,12 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import librosa as lr\n",
     "import octafilt3r.filter as o3f\n",
+    "import octafilt3r.weightings as o3w\n",
     "import os\n",
     "from tensorflow.keras.models import load_model\n",
     "import numpy as np\n",
@@ -24,43 +25,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted class: \"sweep\" with 70 score.\n",
-      "Predicted class: \"sweep\" with 50 score.\n",
-      "Predicted class: \"sweep\" with 92 score.\n",
-      "Predicted class: \"sweep\" with 46 score.\n",
-      "Predicted class: \"sweep\" with 79 score.\n",
-      "Predicted class: \"sweep\" with 98 score.\n",
-      "Predicted class: \"sweep\" with 39 score.\n",
-      "Predicted class: \"sweep\" with 53 score.\n",
-      "Predicted class: \"sweep\" with 51 score.\n",
-      "Predicted class: \"sweep\" with 51 score.\n",
-      "Predicted class: \"sweep\" with 82 score.\n",
+      "Predicted class: \"sweep\" with 66 score.\n",
+      "Predicted class: \"sweep\" with 64 score.\n",
       "Predicted class: \"sweep\" with 97 score.\n",
-      "Predicted class: \"sweep\" with 70 score.\n",
-      "Predicted class: \"sweep\" with 82 score.\n",
-      "Predicted class: \"sweep\" with 94 score.\n",
-      "Predicted class: \"sweep\" with 52 score.\n",
-      "Predicted class: \"sweep\" with 72 score.\n",
+      "Predicted class: \"sweep\" with 67 score.\n",
+      "Predicted class: \"sweep\" with 69 score.\n",
       "Predicted class: \"sweep\" with 98 score.\n",
-      "Predicted class: \"sweep\" with 60 score.\n",
-      "Predicted class: \"sweep\" with 58 score.\n",
-      "Predicted class: \"sweep\" with 93 score.\n",
-      "Predicted class: \"sweep\" with 65 score.\n",
-      "Predicted class: \"sweep\" with 70 score.\n",
-      "Predicted class: \"sweep\" with 98 score.\n",
-      "Predicted class: \"sweep\" with 44 score.\n",
-      "Predicted class: \"sweep\" with 81 score.\n",
+      "Predicted class: \"sweep\" with 42 score.\n",
+      "Predicted class: \"sweep\" with 40 score.\n",
       "Predicted class: \"sweep\" with 96 score.\n",
-      "Predicted class: \"sweep\" with 60 score.\n",
+      "Predicted class: \"sweep\" with 78 score.\n",
+      "Predicted class: \"sweep\" with 70 score.\n",
+      "Predicted class: \"sweep\" with 97 score.\n",
+      "Predicted class: \"sweep\" with 87 score.\n",
+      "Predicted class: \"sweep\" with 78 score.\n",
+      "Predicted class: \"sweep\" with 96 score.\n",
+      "Predicted class: \"sweep\" with 54 score.\n",
+      "Predicted class: \"sweep\" with 86 score.\n",
+      "Predicted class: \"sweep\" with 98 score.\n",
+      "Predicted class: \"sweep\" with 72 score.\n",
+      "Predicted class: \"sweep\" with 89 score.\n",
+      "Predicted class: \"sweep\" with 93 score.\n",
+      "Predicted class: \"sweep\" with 79 score.\n",
       "Predicted class: \"sweep\" with 68 score.\n",
       "Predicted class: \"sweep\" with 98 score.\n",
+      "Predicted class: \"sweep\" with 79 score.\n",
+      "Predicted class: \"sweep\" with 82 score.\n",
+      "Predicted class: \"sweep\" with 97 score.\n",
+      "Predicted class: \"sweep\" with 85 score.\n",
+      "Predicted class: \"sweep\" with 68 score.\n",
+      "Predicted class: \"sweep\" with 99 score.\n",
       "----- done. -----\n",
       "30 true predictions\n",
       "0 false predictions\n",
@@ -90,6 +91,8 @@
     "    LOAD DATA\n",
     "    \"\"\"\n",
     "    wav, fs = lr.load(base_path + file, sr=param_dict['fs'], duration=param_dict[\"max_dur\"])\n",
+    "    wav = o3w.A_weight(wav, fs)\n",
+    "\n",
     "\n",
     "    if len(wav) < fs:\n",
     "        continue\n",
@@ -98,7 +101,7 @@
     "    \"\"\"\n",
     "    EXTRACT FEATURES\n",
     "    \"\"\"\n",
-    "    feats, fcs = o3f.rolling_oct_bank(\n",
+    "    feats, fcs, leqs = o3f.rolling_oct_bank(\n",
     "        wav,\n",
     "        fs,\n",
     "        param_dict['oct_bw_ratio'],\n",
@@ -120,7 +123,7 @@
     "    \"\"\"\n",
     "    SCALE FEATURES\n",
     "    \"\"\"\n",
-    "    # X, scaler = scale.data_scaler(df)\n",
+    "    df = scale.normalize_dbfs(df, leqs)\n",
     "    df = df[..., np.newaxis]\n",
     "\n",
     "\n",
@@ -166,7 +169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.1"
   },
   "orig_nbformat": 4
  },
