--- a/Code/Jupyter/Config.ipynb
+++ b/Code/Jupyter/Config.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,18 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CNN_name: sine_model\n",
+      "CNN_name: esc50_model_v2\n",
       "extr_txt_fp: Datasets/Feature_extraction/th_oct_feats.txt\n",
       "label_txt_fp: Datasets/Feature_extraction/labels.txt\n",
       "leq_txt_fp: Datasets/Feature_extraction/LEQs.txt\n",
-      "source_dir: Datasets/sine_data/\n",
+      "source_dir: Datasets/ESC50_augmented/\n",
       "kernel_size: [3, 3]\n",
       "pool_size: [2, 2]\n",
       "batch_size: 50\n",
@@ -46,11 +46,12 @@
       "frame_size: 1200\n",
       "window_size: 48000\n",
       "max_dur: 10\n",
+      "threshold: -40\n",
       "augmented: True\n",
       "n_bands: 28\n",
       "n_sections: 4\n",
       "fps: 40\n",
-      "class_map: ['multi', 'noise', 'sine', 'sweep']\n"
+      "class_map: ['airplane', 'car_horn', 'engine', 'helicopter', 'rain', 'train']\n"
      ]
     }
    ],
@@ -65,7 +66,7 @@
     "        \"extr_txt_fp\":              \"Datasets/Feature_extraction/th_oct_feats.txt\",\n",
     "        \"label_txt_fp\":             \"Datasets/Feature_extraction/labels.txt\",\n",
     "        \"leq_txt_fp\":               \"Datasets/Feature_extraction/LEQs.txt\",\n",
-    "        \"source_dir\":               \"Datasets/sine_data/\",\n",
+    "        \"source_dir\":               \"Datasets/ESC50_augmented/\",\n",
     "        \"kernel_size\":              (3, 3),\n",
     "        \"pool_size\":                (2, 2),\n",
     "        \"batch_size\":               50,\n",
@@ -82,6 +83,7 @@
     "        \"frame_size\":               1200,    # framing size\n",
     "        \"window_size\":              48000,  # size of a window (max size of input to CNN)\n",
     "        \"max_dur\":                  10,      # max duration of sound in s\n",
+    "        \"threshold\":                -40,\n",
     "        \"augmented\":                True\n",
     "    }\n",
     "\n",
@@ -112,7 +114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4
  },
